# realtimebattle

./: .gitignore  AUTHORS  ChangeLog  EXTRAROBOTS.README  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.in
Arenas/: Flower.arena  Makefile.in  Pool.arena  Propeller.arena
Documentation/: Makefile.am  Makefile.in  RealTimeBattle-1.html  RealTimeBattle-2.html  RealTimeBattle-3.html  RealTimeBattle-4.html  RealTimeBattle-5.html  RealTimeBattle-6.html  RealTimeBattle.dvi  RealTimeBattle.html  RealTimeBattle.info  RealTimeBattle.sgml  RealTimeBattle.txt  realtimebattle.6
Documentation/French/: Makefile.in
Documentation/German/: Makefile.am  Makefile.in  RealTimeBattle-1.html  RealTimeBattle-2.html  RealTimeBattle-3.html  RealTimeBattle-4.html  RealTimeBattle-5.html  RealTimeBattle-6.html  RealTimeBattle.dvi  RealTimeBattle.html  RealTimeBattle.info  RealTimeBattle.sgml  RealTimeBattle.txt
Robots/: Makefile.am  Makefile.in
Robots/joypad_robot/: Makefile.am  Makefile.in  README  joypad_robot_analog.c
Robots/rotate_and_fire/: Makefile.am  Makefile.in
config/: acinclude.m4
include/: ArenaBase.h  ArenaController.h  ArenaRealTime.h  ArenaReplay.h  ArenaWindow.h  ClientInterface.h  ControlWindow.h  Dialog.h  Gui.h  List.h  Makefile.am  Makefile.in  MessageWindow.h  Messagetypes.h  Options.h  OptionsWindow.h  Robot.h  StartTournamentWindow.h  String.h  Structs.h  Various.h  Vector2D.h  fdstream.h
m4/: Makefile.in
po/: Makevars  POTFILES.in  RealTimeBattle.pot  de.gmo  de.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  es.gmo  es.po  gl.gmo  gl.po  ja.gmo  ja.po  messages.mo  pl.gmo  pl.po  pt.gmo  pt.po  sv.gmo  sv.po
rtb-team-framework/: AUTHORS  Makefile.am  Makefile.in  README  acinclude.m4  common.h  configure  configure.in  createrobot.sh  createrobotconf.sh  initcomponents.cpp  initcomponents.h  initexceptions.cpp  main.cpp  stdnamespace.h
rtb-team-framework/bots/brotfrucht/: bfclientbasicstate.cpp  bfclientbasicstate.h  bfclientshoothalfstate.cpp  bfclientshoothalfstate.h  bfclientshoottwicestate.cpp  bfclientshoottwicestate.h  bfclientspecificrepository.cpp  bfclientspecificrepository.h  bfclientstateenum.h  bffactory.cpp  bffactory.h  bfinternalserverspecificrepository.cpp  bfinternalserverspecificrepository.h  bfserverbasicstate.cpp  bfserverbasicstate.h  bfservernorotatestate.cpp  bfservernorotatestate.h  bfserverrotatestate.cpp  bfserverrotatestate.h  bfserverstateenum.h  bfsharedserverspecificrepository.cpp  bfsharedserverspecificrepository.h  brotfruchtnamespace.h
rtb-team-framework/bots/empty/: empty_client_basicstate.cpp  empty_client_basicstate.h  empty_client_derivatedstate.cpp  empty_client_derivatedstate.h  empty_clientspecificrepository.cpp  empty_clientspecificrepository.h  empty_factory.cpp  empty_factory.h  empty_internalserverspecificrepository.cpp  empty_internalserverspecificrepository.h  empty_namespace.h  empty_server_basicstate.cpp  empty_server_basicstate.h  empty_server_derivatedstate.cpp  empty_server_derivatedstate.h  empty_sharedserverspecificrepository.cpp  empty_sharedserverspecificrepository.h
rtb-team-framework/exceptions/: confignotloadedexception.cpp  confignotloadedexception.h  configurationparserexception.cpp  configurationparserexception.h  exceptionsnamespace.h  ioexception.cpp  ioexception.h  keynotfoundexception.cpp  keynotfoundexception.h  parserexception.cpp  parserexception.h  resourcenotfoundexception.cpp  resourcenotfoundexception.h  rtbexception.cpp  rtbexception.h  serverispresentexception.cpp  serverispresentexception.h  strategyexception.cpp  strategyexception.h
rtb-team-framework/gamecontrol/: clientcoordinator.cpp  clientcoordinator.h  clientgamecontroller.cpp  clientgamecontroller.h  coordinator.h  coordinatorcomposite.cpp  coordinatorcomposite.h  coordinatorleaf.cpp  coordinatorleaf.h  gamecontroller.h  gamecontrolnamespace.h  gameoptionsrepository.h  servercoordinator.cpp  servercoordinator.h  servergamecontroller.cpp  servergamecontroller.h
rtb-team-framework/io/: clientcommunicator.h  clientconnection.h  connection.h  iofactory.h  ionamespace.h  localclientconnection.cpp  localclientconnection.h  remoteclientconnection.h  rtbconnection.h  servercommunicator.h  serverconnection.h  unixclientcommunicator.cpp  unixclientcommunicator.h  unixinstream.cpp  unixinstream.h  unixinstreambuf.cpp  unixinstreambuf.h  unixiofactory.cpp  unixiofactory.h  unixoutstream.cpp  unixoutstream.h  unixoutstreambuf.cpp  unixoutstreambuf.h  unixremoteclientconnection.cpp  unixremoteclientconnection.h  unixrtbconnection.cpp  unixrtbconnection.h  unixservercommunicator.cpp  unixservercommunicator.h  unixserverconnection.cpp  unixserverconnection.h
rtb-team-framework/log/: logdriver.h  logger.cpp  logger.h  lognamespace.h  nulllogdriver.h  rtblogdriver.cpp  rtblogdriver.h  sysloglogdriver.cpp  sysloglogdriver.h  unixfilelogdriver.cpp  unixfilelogdriver.h
rtb-team-framework/parser/: argument_type.h  configurationparser.cpp  configurationparser.h  game_option_type.h  message_from_robot_type.h  message_to_robot_type.h  object_type.h  parsernamespace.h  robot_option_type.h  rtbparser.cpp  rtbparser.h  rtbparseresult.h  warning_type.h
rtb-team-framework/rtbglobal/: masterresourcecontrol.cpp  masterresourcecontrol.h  pmap.h  pvector.h  rtbglobalnamespace.h  rtbinit.cpp  rtbinit.h
rtb-team-framework/strategies/: clientspecificrepository.h  clientstate.cpp  clientstate.h  clientstatedata.cpp  clientstatedata.h  internalserverspecificrepository.h  serverstate.cpp  serverstate.h  serverstatedata.cpp  serverstatedata.h  sharedserverspecificrepository.h  specificrepository.h  state.h  strategiesnamespace.h  strategyfactory.h
src/: ArenaBase.cc  ArenaRealTime.cc  ArenaReplay.cc  ArenaWindow.cc  ClientInterface.cc  ControlWindow.cc  Dialog.cc  GeometricalObjects.cc  Gui.cc  List.cc  Makefile.am  Makefile.in  MessageWindow.cc  Options.cc  OptionsWindow.cc  RealTimeBattle.cc  Robot.cc  ScoreWindow.cc  StartTournamentWindow.cc  StatisticsWindow.cc  String.cc  Various.cc  Vector2D.cc
(+52 files in other folders)
